--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "maplibre-gl": "^5.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^8.57.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "typescript-eslint": "^7.10.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.2",
     "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "typescript": "^5.5.3",
+    "typescript-eslint": "^7.10.0",
     "vite": "^5.3.1"
   }
 }
